--- a/www/view/index.html
+++ b/www/view/index.html
@@ -1,5 +1,5 @@
 <ion-view id="index">
-    <ion-content overflow-scroll="true" padding="false" scroll="false">
+    <ion-content overflow-scroll="false" padding="false" scroll="false">
         <div class="row row-no-padding responsive-sm">
             <div class="col col-67 center">
                 <img src="img/aksyonvawlogo.png" id="logo" />
