Developing audio and case 1

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -2,6 +2,11 @@ html, body {
 	background-color: #ffcceb;
 }
 
+.button {
+	white-space: normal !important;
+	padding: 10px !important;
+}
+
 .android-scroll-bar ::-webkit-scrollbar {width: 5px;}
 
 .android-scroll-bar ::-webkit-scrollbar-track { border-radius: 10px;}
