--- a/www/view/identityTheft.html
+++ b/www/view/identityTheft.html
@@ -1,123 +1,8 @@
 <ion-view id="it">
-    <ion-content ng-init="typedFunc()" scroll="false">
-		<section ng-init="scrollInit()" class="itcontent" id="itstart">
-			<div class="typeddiv" on-touch="stopAS()">
-				<p></p>
-			</div>
-			<div class="pcontent">
-				<p>
-					Irene is a 16 year old high school student ^900 who was surprised when she was informed by her friend Jona that her photo was on a tarpaulin outside a beerhouse. ^1100 The said tarpaulin is being used ^500 to entice customers to come in. ^600 To prove it, ^500 Jona took a photo of the tarpaulin and showed at her. ^700 There was no doubt ^300 that it was Irene’s photo together with five other girls.
-				</p>
-			</div>
-			<div class="pcontent1">
-				<p>
-					Irene is a 16 year old high school student who was surprised when she was informed by her friend Jona that her photo was on a tarpaulin outside a beerhouse. The said tarpaulin is being used to entice customers to come in. To prove it, Jona took a photo of the tarpaulin and showed at her. There was no doubt that it was Irene’s photo together with five other girls.
-				</p>
-			</div>
-		</section>
-		<section class="itcontent" id="itscene1" style="display: none;">
-			<div class="typeddiv" on-touch="stopAS()">
-				<p></p>
-			</div>
-			<div class="pcontent">
-				<p>
-					Irene feels depressed. She doesn’t want to go outside because of shame.
-					</br></br>
-					If you keep it to yourself, the tarpaulin will still be there. Your reputation will be put in harm.
-				</p>
-			</div>
-		</section>
-		<section class="itcontent" id="itscene2" style="display: none;">
-			<div class="typeddiv" on-touch="stopAS()">
-				<p></p>
-			</div>
-			<div class="pcontent">
-				<p>
-					Irene reported this to her mother. Her mother went personally to the beerhouse to confirm the tarpaulin exists.
-				</p>
-			</div>
-		</section>
-		<section class="itcontent" id="itscene3" style="display: none;">
-		</section>
-		<section class="itcontent" id="itscene4" style="display: none;">
-		</section>
-		<section class="itcontent" id="itend1" style="display: none;">
-			<div class="typeddiv" on-touch="stopAS()">
-				<p></p>
-			</div>
-			<div class="pcontent">
-				<p>
-					The perpetrator admitted that he used the girls’ photos without their consent to entice customers. He now faces a case of violating RA 7610 & 10175.
-					</br></br>
-					1. Tarp removed in the establishment; Business permit was cancelled and license to operate revoked.
-					</br></br>
-					2. Perpetrator convicted under RA 10175 & RA 7610.
-					</br></br>
-					3. Victim/survivor is are now undergoing counseling and became a youth advocate in their community tackling tech-VAW cases.
-					</br></br>
-					<span class="solvetitle">CASE SOLVED!</span>
-				</p>
-			</div>
-		</section>
-		<section class="itcontent" id="itend2" style="display: none;">
-			<div class="typeddiv" on-touch="stopAS()">
-				<p></p>
-			</div>
-			<div class="pcontent">
-				<p>
-					Irene ignored the incident. The beerhouse operator continued using the tarpaulin to entice customers.
-					<br><br>
-					<span class="endtitle">END OF GAME.</span>
-				</p>
-			</div>
-		</section>
-		<section class="itcontent" id="itend3" style="display: none;">
-			<div class="typeddiv" on-touch="stopAS()">
-				<p></p>
-			</div>
-			<div class="pcontent">
-				<p>
-					<span class="ptitle">RA 7610</span> – is an act providing for stronger deterrence and special protection against child abuse, exploitation and discrimination, providing penalties for its violation and for other purposes.
-					</br></br>
-					<span class="ptitle">RA 10175</span> - It aims to address legal issues concerning online interactions and the Internet in the Philippines. Among the cybercrime offenses included in the bill are cybersquatting, cybersex, child pornography, identity theft, illegal access to data and libel.
-				</p>
-			</div>
-		</section>
-		<section class="itcontent" id="itend4" style="display: none;">
-			<div class="typeddiv" on-touch="stopAS()">
-				<p></p>
-			</div>
-			<div class="pcontent">
-				<p>
-					Tips to Protect Yourself on Social Networks:
-					</br></br>
-					1. Remember the Internet is permanent.
-					</br></br>
-					2. Be selective when accepting a friend.
-					</br></br>
-					3. Exercise caution when clicking on links.
-					</br></br>
-					4. Manage your privacy settings.
-					</br></br>
-					5. Be aware of the fact that the information you share on one social network may be linked to another.
-					</br></br>
-					6. Don’t reveal personal information.
-					</br></br>
-					7. Turn off the GPS function on your smartphone camera.
-					</br></br>
-					8. Don’t enable auto login.
-					</br></br>
-					9. Change your passwords frequently.
-					</br></br>
-					10. Close old accounts that you don’t use anymore.
-					</br></br>
-					Social networking is meant to be fun. Let’s keep it that way by staying safe online.
-				</p>
-			</div>
-		</section>
-		<button class="button button-small button-assertive btnNext" ng-controller="popoverCtrl" ng-click="changeQues(); openPopover($event, 'it')">NEXT</button>
-		<button class="button button-small button-assertive btnNext1" ng-click="changePage('next');">NEXT</button>
-		<button class="button button-small button-assertive btnSkip" ng-click="skip()">SKIP</button>
-		<button ui-sref="category" class="button button-small button-assertive btnExit" style="display: none;">EXIT</button>
+    <ion-content scroll="false">
+		Identity Theft
+		<button class="button button-full button-assertive" ng-click="openPopover()">
+			Open
+		</button>
     </ion-content>
 </ion-view>
