--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,23 +1,44 @@
+/*GLOBAL CUSTOM*/
+
 html, body {
 	background-color: #ffcceb;
 }
 
+span.successTitle{
+	color: rgb(0, 255, 0);
+	font-weight: bold;
+	font-size: 1.3em;
+}
+
+span.pTitle{
+	color: rgb(255, 102, 0);
+	font-weight: bold;
+	font-size: 1.3em;
+}
+
+span.failTitle{
+	color: red;
+	font-weight: bold;
+	font-size: 1.3em;
+}
+
+/*END OF GLOBAL CUSTOM*/
+
+/*BUTTONS*/
+
 .button {
 	white-space: normal !important;
-	padding: 10px !important;
+	padding: 5px !important;
 }
 
-.android-scroll-bar ::-webkit-scrollbar {width: 5px;}
-
-.android-scroll-bar ::-webkit-scrollbar-track { border-radius: 10px;}
-
-.android-scroll-bar ::-webkit-scrollbar-thumb { border-radius: 10px; background: rgb(169,169,169); }
-
-.android-scroll-bar ::-webkit-scrollbar-thumb:window-inactive {background: rgb(128,128,128); }
-
-.scroll-bar-indicator {
-    display: none !important;
+.button-assertive {
+	background-color: #ff0099 !important;
+	color: white !important;
 }
+
+/*END OF BUTTONS*/
+
+/*UTILITIES*/
 
 .no-padding-margin {
 	padding: 0;
@@ -28,14 +49,17 @@ html, body {
 	text-align: center;
 }
 
-.button-assertive {
-	background-color: #ff0099 !important;
-	color: white !important;
+/*END OF UTILITIES*/
+
+/*TYPED.JS*/
+
+.typed-cursor{
+	display: none;
 }
 
-/**
- * Popover CSS 
- */
+/*END OF TYPED.JS*/
+
+/*POPOVER*/
 
 ion-popover-view.fit {
     height: auto !important;
@@ -61,4 +85,18 @@ ion-popover-view.fit .button-block{
 	line-height: 100%;
 	min-height: 100%;
 	font-size: 100%;
+}
+
+/*END OF POPOVER*/
+
+.android-scroll-bar ::-webkit-scrollbar {width: 5px;}
+
+.android-scroll-bar ::-webkit-scrollbar-track { border-radius: 10px;}
+
+.android-scroll-bar ::-webkit-scrollbar-thumb { border-radius: 10px; background: rgb(169,169,169); }
+
+.android-scroll-bar ::-webkit-scrollbar-thumb:window-inactive {background: rgb(128,128,128); }
+
+.scroll-bar-indicator {
+    display: none !important;
 }
